@@ -1,6 +1,7 @@
 0.07
  - Add doc for Wikibase::Datatype::Print::MediainfoSnak.
  - Add doc for Wikibase::Datatype::Print::Snak.
+ - Add doc for Wikibase::Datatype::Print::Statement.
 
 0.06 2023-04-15T18:46:48+02:00
  - Add doc for Wikibase::Datatype::Print::Sitelink.
